[package]
name = "rac_rs"
description = "A Rust client library for RAC (Real Address Chat) protocol."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
keywords = ["rac", "chat", "client", "protocol"]
license = "MIT"
repository = "https://github.com/kostya-zero/rac-rs"
homepage = "https://github.com/kostya-zero/rac-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"], optional = true }

[features]
default = []
async_client = ["tokio"]
