[package]
name = "rac_rs"
description = "A Rust client library for RAC (Real Address Chat) protocol."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
keywords = ["rac", "chat", "client", "protocol"]
license = "MIT"
repository = "https://github.com/kostya-zero/rac-rs"
homepage = "https://github.com/kostya-zero/rac-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
native-tls = "0.2.14"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
tungstenite = { version = "0.27.0", optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

[features]
default = ["async_client", "wrac", "async_wrac"]
async_client = ["tokio", "tokio-native-tls"]
wrac = ["tungstenite"]
async_wrac = ["tokio-tungstenite", "tungstenite", "tokio", "futures-util"]
